--- a/css/details.css
+++ b/css/details.css
@@ -47,7 +47,7 @@ h3{
     height:auto;
     background-color: #272B30 !important;
     position: absolute;
-    top: 100%;
+    top: 100% !important;
     left: 0%;
     border: 1px solid yellow !important;
 }
@@ -56,9 +56,11 @@ h3{
 
     .game-data{
         left: 10px;
-        top:52%;
+        top:50%;
     }
-  
+    #btnClose{
+         top: 5% !important;
+    }
         
 
   }
