--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,35 @@
 body {
   background-color: rgb(39, 43, 48);
 }
+
+/* width */
+::-webkit-scrollbar {
+  width: 15px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #3A497B;
+  border-radius: 10px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
 header img {
   max-height: 30vh;
   object-fit: cover;
